bugfix: Классы, не верный тип поля класса в Навыках, заменил строку на коллекцию